--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <section class="home section active" id="home">
                     <div class="container">
                         <div class="intro">
-                            <img src="./img/profile.jpeg" alt="Profile" class="dark-shadow">
+                            <img src="./img/1640775511485.jpg" alt="Profile" class="dark-shadow">
                             <h1>Ahmed Mohamed Fathy</h1>
                             <p>Web Developer</p>
                             <div class="social-links">
