upade index.html

--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
                                 <div class="row">    
                                     <div class="about-text px">
                                         <h3> Ahmed Mohamed<span> Fathy</span></h3>
-                                        <p>Hi! I'm Ahmed Fathy form Egypt.Senior Petroleum Engineer With Three years Experience in Web Development.
+                                        <p>Hi! I'm Ahmed Fathy. Fresh graduate Petroleum Engineer With Four years Experience in Web Development.
+                                            <br>I've recently joined ITI studying web development technologies in both .Net and Mean Stack.
                                             <br>I'm interested in programming and coding.
                                             <br>Looking forward to enriching my knowledge in this field and build awesome applications.
                                             <br>Three years of volunteering in Suez University Student chapters as IT Web specialist in EEGS, AAPG, SPE.
                                             <br>Built apps With Html, CSS, JavaScript, PHP, MySQL, wordpress and Laravel.
                                             <br>Familiar with many libraries, frameworks and technologies in web development like JQuery, Bootstrap, VueJs and Firebase.
-                                            <br>Have some basic knowledge of Java.
-                                            <br>Familiar with python and Artificial Intelligence field and HCIA-AI certified.
                                         </p>
                                     </div>
                                     <div class="row px">
