--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" class="alternate-style" title="orange" href="./css/orange.css" type="text/css" disabled>
 
         <link rel="stylesheet" href="./css/style-switcher.css">
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" >
+        <link rel="shortcut icon" type="image/x-icon" href="img/fav_icon1.ico" >
         <title>Ahmed M. Fathy</title>
     </head>
 
